--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<header class="header">
+    <div class="container">
+        <span class="text1">TOP ANTIVIRUS</span>
+        <span class="text2">PC APP STORE</span>
+    </div>
+</header>
+<div class="page">
+    <div class="intro">
+        <div class="container">
+            <span class="text3">thank you for choosing our product !</span>
+            <a class="btn" href="#">download</a>
+        </div>
+    </div>
+    <div class="stage">
+        <div class="box bounce-1"></div>
+        <div class="sos bounce-1"></div>
+    </div>
+    <footer class="footer">
+        <div class="container_footer">
+            <span class="text1">TOP ANTIVIRUS</span>
+            <span class="text4">Copyright © 2021</span>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
