--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         </div>
     </div>
     <div class="stage">
-        <div class="box bounce-1"></div>
-        <div class="sos bounce-1"></div>
+        <div class="house bounce-1"></div>
     </div>
     <footer class="footer">
         <div class="container_footer">
